themes/finna2/less/global/icons.less
/* ... */
.iconlabel.format-1soundsoundcassette:before, .iconlabel.format-1soundnonmusicalcassette:before, .iconlabel.format-1othertapecassette:before, .iconlabel.format-1otherdisccartridge:before {
    content: "\e8ad";
}
.iconlabel[class*="format-1image"]:before {
    content: "\e008";
}
.iconlabel-smallpress:before, .iconlabel.format-1otherprint:before {
    content: "\e007";
}
.fa.fa-TOC:before, .iconlabel.format-1document:before, .iconlabel.format-1documentother:before, .iconlabel.format-1documentdigitizedarchiveitem:before, .iconlabel.format-1othertexttext:before, .iconlabel.format-1othertextdiary:before, .iconlabel.format-1othertextconferenceproceeding:before, .iconlabel.format-1othertextmanuscript:before, .iconlabel.format-1othertextresearchreport:before, .iconlabel.format-1othertextletter:before, .iconlabel.format-0manuscript:before {
    font-family: finnaicons;
    content: "\e006";
}
.iconlabel[class*="format-1documentarchive"]:before, .iconlabel[class*="format-1documentdigitizedarchive"]:before, .iconlabel[class*="format-1documentseries"]:before, .iconlabel.format-1documentothercollection:before, .iconlabel.format-1documentcollection:before {
    font-family: finnaicons;
    content: "\e8cb";
}
.iconlabel.format-0note:before, .iconlabel.format-0musicalscore:before, .iconlabel[class*="format-1musicalscore"]:before {
    content: "\e005";
}
.iconlabel.format-0database:before {
    content: "\e004";
}
.iconlabel.esine:before, .iconlabel.format-1physicalobjectother:before, .iconlabel.format-1physicalobjectculturehistoricalobject:before, .iconlabel.format-0physicalobject:before {
    content: "\e003";
}
.iconlabel[class*="format-1map"]:before, .iconlabel.karttapallo:before {
    content: "\e002";
}
.iconlabel.format-0learningmaterial:before {
    content: "\e971";
}
.iconlabel[class*="format-1gameboardgame"]:before {
	content: "\e8c2";
}
.iconlabel[class*="format-1gamevideogame"]:before, .iconlabel[class*="format-2gamevideogame"]:before {
	font-family: FontAwesome;
	content: @fa-var-gamepad;
}
.iconlabel.full-text-available:before {
    content: "\e96e";
}
.iconlabel.peer-reviewed:before {
    content: "\e8b6";
}
.iconlabel.open-access:before {
    content: "\e91f";
}
.iconlabel.R2-restricted-metadata-available:before {
    content: "\e8bb";
}
.iconlabel.R2-restricted-metadata-included:before {
    content: "\e889";
}
.iconlabel.cc-license:before {
    content: "\e905";
}
.iconlabel.finna-street:before {
    content: "\e60e";
}
.iconlabel.download:before {
    content: "\e910";
}
.iconlabel.finna-logo:before {
    content: "\e913";
}
.iconlabel.other-records:before {
    content: "\e00d";
}

/* Navbar */
// Set navbar logo display only the logo
.navbar-header .fa-finnalogo {
    width: 30px;
    height: 40px;
    background: url('../images/finna-logo.png'); // fallback if no svg support
    background: url('../images/finna-logo.svg');
    overflow: hidden;
    vertical-align: middle;
    background-repeat: no-repeat;
    background-position: 0px 2px;
    background-size: 340%;
}
.navbar-brand {
    & div.navbar-lang-logo {
        width: 30px;
        height: 40px;
        & div.logo-wrapper  {
            position: absolute;
            overflow: hidden;
            width: 30px;
            height: 40px;
            & img {
                position: relative;
                top: -2px;
                vertical-align: middle;
                max-width: 340%;
            }
        }
    }
}
.logo .finnalogo {
    display: inline-block;
    width: 250px;
    height: 63px;
    background: url('../../finna/images/finnafi-logo.png'); // fallback if no svg support
    background: url('../../finna/images/finnafi-logo.svg');
    background-repeat: no-repeat;
    background-size: 100%;
    @media (max-width: @screen-xs-max) {
           width: (250px*0.8);
           height: (63px*0.8);
    }
    &:hover {
        cursor: pointer;
    }
}

/* Browsebar */
.browsebar [class*=" fa-"], .browsebar .icon {
    text-align: initial;
}

/* Image popup */
.image-popup-trigger {
    &:hover {
        text-decoration: none;
    }
    & img {
        box-shadow: 0 0 0 2px @gray-lighter inset;
        position: relative;
    }
    & img.pdf-cover {
        box-shadow: 0 0 0 2px @gray-lighter;
    }
    & .iconlabel {
        width: 100%;
        color: @body-bg;
        display: none;

        &:before {
            padding-right: 3px;
            position: absolute;
            font-size: 39px;
            color: @gray-lighter;
            z-index: 1;
            top: 50%;
            left: 50%;
            margin-left: -18px;
            margin-top: -27px;
            @media (min-width:@screen-xs-min) and (max-width:@screen-sm-max) {
                font-size: 26px;
                top: 50%;
                left: 50%;
                margin-left: -12.5px;
                margin-top: -18.5px;
            }
        }
    }
}
.grid-image .image-popup-trigger {
    & .iconlabel:before {
        margin-top: -36px;
        margin-left: -18px;
    }
    @media (max-width:@screen-xs-max) {
        display: block;
         & img {
            box-shadow: 0px 0px 0px 2px @gray-lighter inset;
        }
    }
    @media (max-width: @screen-sm-max) {
        & .iconlabel:before {
            font-size: 39px;
        }
    }
}
.image-popup-trigger.no-image {
    img {
        width: 100%;
        min-width: 100px;
    }
    @media (max-width:@screen-xs-max) {
        display: none;
    }
    & .iconlabel {
        display: block;
    }
    &.disable {
        cursor: default;
    }
    .model-3d {
        display: none;
    }
}
.image-popup-trigger {
    .model-trigger {
        display: none;
    }
    &.model-no-image {
        .model-trigger {
            display: block;
        }
        img {
            display: none;
        }
    }
}

/* Spinner */
#description_text .fa-spinner {
    position: absolute;
    right: 15px;
    top: 0;
}
/* ... */

